adding styles to home page

--- a/store/blocks/global/components/header/header-section-one-notification-bar.jsonc
+++ b/store/blocks/global/components/header/header-section-one-notification-bar.jsonc
@@ -1,15 +1,10 @@
 {
     "notification.bar": {
-        /*"children":[
-        "rich-text#notification__bar-text",
-        "rich-text#notification__bar-link"
-        ]*/
-        //8
         "props": {
-            "content": "Envío gratis en tus compras de mercado superiores a $80.000 con tarjetas Carulla",
-            "blockClass": "notification__bar-content"
+        "content": "Envío gratis en tus compras de mercado superiores a $80.000 con tarjetas Carulla",
+            "blockClass": "notificationBarInner"
         }
-    },
+    }/*,
     "rich-text#notification__bar-text": {
         "props": {
             "text": "Envío gratis en tus compras de mercado superiores a $80.000 con tarjetas Carulla"
@@ -19,5 +14,5 @@
         "props": {
             "text": "Envío gratis en tus compras de mercado superiores a $80.000 con tarjetas Carulla"
         }
-    }
+    }*/
 }
